add all for swagger, test all 4 handlers user/game
