# server/domains/game/GamesHandlers.go
@@ -16,36 +16,54 @@ func CreateGamesHandlers(gameService *GamesService) GamesHandlers {
 	}
 }
 
+// CreateGame godoc
+// @Summary create new game.
+// @Description create new game.
+// @Tags game
+// @Accept json
+// @Produce json
+// @Security       JWT
+// @Param Body body dto.RequestedCreateGame true "request"
+// @Success 200 {object} map[string]interface{}
+// @Router /game/ [post]
 func (h *GamesHandlers) CreateGame(c *fiber.Ctx) error {
-	userId, err1 := dto.GetClientId(c)
-
-	userRequestedColor, err2 := dto.GetRequestedColor(c)
-	if err1 != nil || err2 != nil {
-		fmt.Println(err1, err2)
+	request, err := dto.GetRequestNewGame(c)
+	if err != nil {
+		fmt.Println(err)
 		return c.SendStatus(fiber.StatusBadRequest)
 	}
 
-	requestCreateGame, err := h.gameService.CreateGame(userId, userRequestedColor)
+	responseCreateGame, err := h.gameService.CreateGame(request.Id, request.IsWhite)
 	if err != nil {
 		fmt.Println(err)
 		return c.SendStatus(fiber.StatusInternalServerError)
 	}
 
-	return c.JSON(fiber.Map{"gameId": requestCreateGame.GameId})
+	return c.JSON(fiber.Map{"gameId": responseCreateGame.GameId})
 
 }
 
+// GetBoard godoc
+// @Summary get board.
+// @Description get board.
+// @Tags board
+// @Accept json
+// @Produce json
+// @Security       JWT
+// @Param gameId header string true "gameId"
+// @Param userId header string true "userId"
+// @Success 200 {object} map[string]interface{}
+// @Router /game/:gameId/board [get]
 func (h *GamesHandlers) GetBoard(c *fiber.Ctx) error {
-	userId, err1 := dto.GetClientId(c)
-
-	gameId, err2 := dto.GetGameId(c)
-	if err1 != nil || err2 != nil {
+	request, err := dto.GetRequestGetBoard(c)
+	if err != nil {
+		fmt.Println(err)
 		return c.SendStatus(fiber.StatusBadRequest)
 	}
 
 	fmt.Println(-1)
 
-	responseGetBoard, err := h.gameService.GetBoard(gameId, userId)
+	responseGetBoard, err := h.gameService.GetBoard(request.GameId, request.UserId)
 	if err != nil {
 		return c.SendStatus(fiber.StatusInternalServerError)
 	}
