# server/domains/user/dto/Models.go
@@ -5,6 +5,16 @@ type CreateUsersResponse struct {
 	Password string `json:"password"`
 }
 
-type ResponseUserPassword struct {
+type RequestUserIdAndPassword struct {
+	Id       int    `json:"id"`
+	Password string `json:"password"`
+}
+
+type ResponseUserIdAndPassword struct {
+	Id       int    `json:"id"`
+	Password string `json:"password"`
+}
+
+type RequestPassword struct {
 	Password string `json:"password"`
 }
